format: formatted with new SLOTH formatter